<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_sort"
        android:title="@string/menu_sort"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_all"
        android:title="@string/menu_delete_all"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:title="@string/menu_about"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_map_normal"
        android:title="@string/menu_map_normal"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_map_satellite"
        android:title="@string/menu_map_satellite"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_map_fit"
        android:title="@string/menu_map_fit"
        android:visible="false"
        app:showAsAction="never" />
</menu>
